--- a/.env
+++ b/.env
@@ -1,43 +1,14 @@
-# Local ENV
-#
-# AUTHOR : KUSHAGRA SHARMA
-#
-#
-# # Created by Vercel CLI
-BLOB_READ_WRITE_TOKEN="vercel_blob_rw_HRGuOWaKOQeWkiQ6_PUjbtHSwTvn4q6c8oOM6EeUwCYEXce"
-NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyDg-6yejnw72cFMH7kY5JpQLRwx7D6M8YA"
-NEXT_PUBLIC_FIREBASE_APP_ID="1:1898883886:web:971e3a449222ea1cc268bf"
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="tda-webapp.firebaseapp.com"
-NEXT_PUBLIC_FIREBASE_DATABASE_URL="https://tda-webapp-default-rtdb.asia-southeast1.firebasedatabase.app"
-NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID="G-NKE"
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="1898883886"
-NEXT_PUBLIC_FIREBASE_PROJECT_ID="tda-webapp"
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="tda-webapp.appspot.com"
+# Created by Vercel CLI
+GOOGLE_ID="469086560056-mnrfj6ghq989qa6etivenvtsu2d18cfi.apps.googleusercontent.com"
+GOOGLE_SECRET="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"
+NEXTAUTH_SECRET="e374cd5c614c9ae3b8b304831f558471"
+NEXTAUTH_URL="http://localhost:3000"
+NEXT_PUBLIC_ROOT_DOMAIN="thedarkartist.in"
 POSTGRES_DATABASE="verceldb"
-POSTGRES_HOST="ep-empty-scene-a4lapabx-pooler.us-east-1.aws.neon.tech"
-POSTGRES_PASSWORD="Ff2NWweP7LDp"
-POSTGRES_PRISMA_URL="postgres://default:Ff2NWweP7LDp@ep-empty-scene-a4lapabx-pooler.us-east-1.aws.neon.tech/verceldb?pgbouncer=true&connect_timeout=15&sslmode=require"
-POSTGRES_URL="postgres://default:Ff2NWweP7LDp@ep-empty-scene-a4lapabx-pooler.us-east-1.aws.neon.tech/verceldb?sslmode=require"
-POSTGRES_URL_NON_POOLING="postgres://default:Ff2NWweP7LDp@ep-empty-scene-a4lapabx.us-east-1.aws.neon.tech/verceldb?sslmode=require"
-POSTGRES_URL_NO_SSL="postgres://default:Ff2NWweP7LDp@ep-empty-scene-a4lapabx-pooler.us-east-1.aws.neon.tech/verceldb"
+POSTGRES_HOST="ep-plain-rain-a100yqrc-pooler.ap-southeast-1.aws.neon.tech"
+POSTGRES_PASSWORD="2dUoNTeH7spD"
+POSTGRES_PRISMA_URL="postgres://default:2dUoNTeH7spD@ep-plain-rain-a100yqrc-pooler.ap-southeast-1.aws.neon.tech/verceldb?pgbouncer=true&connect_timeout=15&sslmode=require"
+POSTGRES_URL="postgres://default:2dUoNTeH7spD@ep-plain-rain-a100yqrc-pooler.ap-southeast-1.aws.neon.tech/verceldb?sslmode=require"
+POSTGRES_URL_NON_POOLING="postgres://default:2dUoNTeH7spD@ep-plain-rain-a100yqrc.ap-southeast-1.aws.neon.tech/verceldb?sslmode=require"
+POSTGRES_URL_NO_SSL="postgres://default:2dUoNTeH7spD@ep-plain-rain-a100yqrc-pooler.ap-southeast-1.aws.neon.tech/verceldb"
 POSTGRES_USER="default"
-
-
-VERCEL_ENV="development"
-
-
-# NEXTAUTH
-NEXTAUTH_SECRET=e374cd5c614c9ae3b8b304831f558471
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=e374cd5c614c9ae3b8b304831f558471
-
-# GOOGLE OAUTH
-GOOGLE_ID=469086560056-mnrfj6ghq989qa6etivenvtsu2d18cfi.apps.googleusercontent.com
-GOOGLE_SECRET=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
-
-
-
-LOCAL_DB=postgresql://postgres@localhost:5432/tdaclientv2
-
-
-
