--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,8 +11,6 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.14.0",
-    "@react-three/drei": "^9.105.6",
-    "@react-three/fiber": "^8.16.6",
     "@tabler/icons-react": "^3.4.0",
     "@tsparticles/engine": "^3.4.0",
     "@tsparticles/react": "^3.0.0",
@@ -33,8 +31,6 @@
     "sharp": "^0.33.4",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
-    "three": "^0.164.1",
-    "three-globe": "^2.31.0",
     "vercel": "^34.2.0"
   },
   "devDependencies": {
