Added Vercel Analytics, SpeedInsight

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 # Created by Vercel CLI
+BLOB_READ_WRITE_TOKEN="vercel_blob_rw_6nNxBi2CAPTvmjhs_TjRNp9ejqCBOki3DDh2kNV8vwm55bo"
 GOOGLE_ID="469086560056-mnrfj6ghq989qa6etivenvtsu2d18cfi.apps.googleusercontent.com"
 GOOGLE_SECRET="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"
 NEXTAUTH_SECRET="e374cd5c614c9ae3b8b304831f558471"
@@ -12,3 +13,4 @@ POSTGRES_URL="postgres://default:2dUoNTeH7spD@ep-plain-rain-a100yqrc-pooler.ap-s
 POSTGRES_URL_NON_POOLING="postgres://default:2dUoNTeH7spD@ep-plain-rain-a100yqrc.ap-southeast-1.aws.neon.tech/verceldb?sslmode=require"
 POSTGRES_URL_NO_SSL="postgres://default:2dUoNTeH7spD@ep-plain-rain-a100yqrc-pooler.ap-southeast-1.aws.neon.tech/verceldb"
 POSTGRES_USER="default"
+VERCEL_ENV="development"
