--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@tsparticles/engine": "^3.4.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.4.0",
+    "@vercel/analytics": "^1.3.1",
     "@vercel/blob": "^0.23.2",
+    "@vercel/speed-insights": "^1.0.11",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.4",
     "mini-svg-data-uri": "^1.4.4",
