--- a/package.json
+++ b/package.json
@@ -20,19 +20,31 @@
     "@vercel/speed-insights": "^1.0.11",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.4",
+    "highlight.js": "^11.9.0",
+    "katex": "^0.16.10",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
     "react-textarea-autosize": "^8.5.3",
+    "rehype-autolink-headings": "^7.1.0",
     "rehype-highlight": "^7.0.0",
+    "rehype-katex": "^7.0.0",
+    "rehype-raw": "^7.0.0",
+    "rehype-slug": "^6.0.0",
+    "remark-autolink-headings": "^7.0.1",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-slug": "^7.0.1",
     "sharp": "^0.33.4",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
+    "unified": "^11.0.4",
     "vercel": "^34.2.0"
   },
   "devDependencies": {
