--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^11.2.4",
     "highlight.js": "^11.9.0",
     "katex": "^0.16.10",
+    "mermaid": "^10.9.1",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
@@ -36,10 +37,13 @@
     "rehype-katex": "^7.0.0",
     "rehype-raw": "^7.0.0",
     "rehype-slug": "^6.0.0",
+    "remark": "^15.0.1",
     "remark-autolink-headings": "^7.0.1",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
+    "remark-mermaid": "^0.2.0",
     "remark-parse": "^11.0.0",
+    "remark-react": "^9.0.1",
     "remark-slug": "^7.0.1",
     "sharp": "^0.33.4",
     "sonner": "^1.4.41",
