--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vercel/blob": "^0.23.2",
     "@vercel/speed-insights": "^1.0.11",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.2.4",
     "highlight.js": "^11.9.0",
     "katex": "^0.16.10",
@@ -30,6 +31,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-loader-spinner": "^6.1.6",
     "react-markdown": "^9.0.1",
     "react-textarea-autosize": "^8.5.3",
     "rehype-autolink-headings": "^7.1.0",
@@ -48,7 +50,8 @@
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "unified": "^11.0.4",
-    "vercel": "^34.2.0"
+    "use-debounce": "^10.0.1",
+    "vercel": "^32.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
